Implementado a view index.phtml

--- a/App/Views/index/index.phtml
+++ b/App/Views/index/index.phtml
@@ -1,3 +1,35 @@
-<h1>Index</h1>
+<div class="container">
+<div class="row">
+	<div class="col-md-4 col-md-offset-4">
+		
 
-<hr>
+		<!-- Start Sign In Form -->
+		<form class="fh5co-form animate-box" data-animate-effect="fadeIn">
+			<h2>Entre</h2>
+			<div class="form-group">
+				<label for="username" class="sr-only">Email</label>
+				<input name="email" type="Email" class="form-control" id="username" placeholder="Email">
+			</div>
+			<div class="form-group">
+				<label for="password" class="sr-only">Senha</label>
+				<input name="senha" type="password" class="form-control" id="password" placeholder="Senha">
+			</div>
+			<div class="form-group">
+				<label for="remember"><input type="checkbox" id="remember"> Mantenha-me logado</label>
+			</div>
+			<div class="form-group">
+				<p>Não é registado? <a href="#">Cadadtre-se</a></p>
+			</div>
+
+			<div class="form-group">
+				<input type="submit" value="Entrar" class="btn btn-primary">
+			</div>
+		</form>
+		<!-- END Sign In Form -->
+
+	</div>
+</div>
+	<div class="row" style="padding-top: 60px; clear: both;">
+		<div class="col-md-12 text-center" style="color: white;"><p><small>&copy; All Rights Reserved. Designed by <a href="https://freehtml5.co" target="_blank">FreeHTML5.co</a></small></p></div>
+	</div>
+</div>
