Implementado a view cadastrese.phtml

--- a/App/Views/index/index.phtml
+++ b/App/Views/index/index.phtml
@@ -18,7 +18,7 @@
 				<label for="remember"><input type="checkbox" id="remember"> Mantenha-me logado</label>
 			</div>
 			<div class="form-group">
-				<p>Não é registado? <a href="#">Cadadtre-se</a></p>
+				<p>Não é registado? <a href="/cadastre-se">Cadadtre-se</a></p>
 			</div>
 
 			<div class="form-group">
