--- a/App/Views/index/cadastrese.phtml
+++ b/App/Views/index/cadastrese.phtml
@@ -4,27 +4,34 @@
 			
 
 			<!-- Start Sign In Form -->
-			<form class="fh5co-form animate-box" data-animate-effect="fadeIn">
+			<form action="/registrar" method="POST" class="fh5co-form animate-box" data-animate-effect="fadeIn">
 				<h2>Inscreva-se</h2>
-				<!-- <div class="form-group">
-					<div class="alert alert-success" role="alert">Your info has been saved.</div>
-				</div> -->
+				
+				<?php if($this->view->erroCadastro) { ?>
+				<div>
+					<small class="text text-danger">
+						*Erro ao realizar cadastro! Verifique se os campos foram preenchidos corretamente.
+					</small>
+				</div>
+				<?php } ?>
+
 				<div class="form-group">
 					<label for="name" class="sr-only">Nome</label>
-					<input name="nome" type="text" class="form-control" id="name" placeholder="Nome" autocomplete="off">
+					<input name="nome" type="text" value="<?=$this->view->usuario['nome']?>" class="form-control" id="name" placeholder="Nome" autocomplete="off">
 				</div>
 				<div class="form-group">
 					<label for="email" class="sr-only">Email</label>
-					<input name="email" type="email" class="form-control" id="email" placeholder="Email" autocomplete="off">
+					<input name="email" type="email" value="<?=$this->view->usuario['email']?>" class="form-control" id="email" placeholder="Email" autocomplete="off">
 				</div>
 				<div class="form-group">
 					<label for="password" class="sr-only">Senha</label>
-					<input name="senha1" type="password" class="form-control" id="password" placeholder="Senha" autocomplete="off">
+					<input name="senha1" type="password" value="<?=$this->view->usuario['senha1']?>" class="form-control" id="password" placeholder="Senha" autocomplete="off">
 				</div>
 				<div class="form-group">
 					<label for="re-password" class="sr-only">Confirme a senha</label>
-					<input name="senha2" type="password" class="form-control" id="re-password" placeholder="Confirme a senha" autocomplete="off">
+					<input name="senha2" type="password" value="<?=$this->view->usuario['senha2']?>" class="form-control" id="re-password" placeholder="Confirme a senha" autocomplete="off">
 				</div>
+
 				<div class="form-group">
 					<label for="remember"><input type="checkbox" id="remember">  Mantenha-me logado</label>
 				</div>
